<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#114C5F"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/text_Password"
        android:inputType="textPassword"
        android:textColor="#4DFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmail"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/TextEmail"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/text_Email"
        android:inputType="textEmailAddress"
        android:textColor="#4DFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/text_Ingresar"
        android:textColor="#114C5F"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/textOlvidaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Olvidaste"
        android:textColor="#66FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/textRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Registrate"
        android:textColor="#66FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOlvidaste"
        app:layout_constraintVertical_bias="0.061" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
