<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2Estacionar">

  <TextView
      android:id="@+id/textSaldo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="32dp"
      android:fontFamily="sans-serif-black"
      android:text="@string/text_Saldo"
      android:textColor="#114C5F"
      android:textSize="25sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.165" />

  <TextView
      android:id="@+id/textNumeroSaldo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="32dp"
      android:fontFamily="sans-serif-black"
      android:text="@string/text_Numero_Saldo"
      android:textColor="#114C5F"
      android:textSize="50sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.248" />

  <Button
      android:id="@+id/buttonCargarSaldo"
      android:layout_width="160dp"
      android:layout_height="49dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="32dp"
      android:backgroundTint="#114C5F"
      android:text="@string/text_Cargar_Saldo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.386" />

  <EditText
      android:id="@+id/TextNumberBox"
      android:layout_width="209dp"
      android:layout_height="60dp"
      android:ems="10"
      android:gravity="center"
      android:inputType="number"
      android:textColor="#BAB9B9"
      android:hint="Numero de box"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.588" />

  <Button
      android:id="@+id/buttonComenzar"
      android:layout_width="145dp"
      android:layout_height="52dp"
      android:text="@string/text_Comenzar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.695" />

</androidx.constraintlayout.widget.ConstraintLayout>